# Hospital-discharge-Summary-Agent-

./: Dockerfile  LICENSE  README.md  app.py  arch.md  astra_processor.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
agents/: conflict_agent.py  extractor.py  medication_agent.py  planner.py  safety_agent.py  summary_agent.py
agents/outputs/: patient_data_extracted.json
discharge_agent/: README.md  main.py
discharge_agent/agent/: __init__.py  executor.py  loop.py  planner.py  state.py
discharge_agent/config/: __init__.py  settings.py
discharge_agent/data/: Bill_HB_2024_00101_Mr_Rajesh_Kumar_Sharma.docx  Bill_HB_2024_00102_Ms_Sunita_Devi_Patel.docx  Bill_HB_2024_00103_Mr_Mohammed_Irfan_Sheikh.docx  Bill_HB_2024_00104_Ms_Kavya_Reddy.docx  Bill_HB_2024_00105_Mr_Arun_Mishra.docx  Bill_HB_2024_00106_Ms_Pooja_Sharma_Gupta.docx  Bill_HB_2024_00107_Mr_Deepak_Joshi.docx  Bill_HB_2024_00108_Ms_Meena_Kumari_Saxena.docx  Bill_HB_2024_00109_Mr_Vikram_Singh_Chauhan.docx  Bill_HB_2024_00110_Ms_Lalita_Banerjee.docx  Bill_HB_2024_00111_Mr_Anand_Krishnamurthy.docx  Bill_HB_2024_00112_Ms_Ritu_Agarwal_Jain.docx  Hospital_Patient_Bills_Dataset.xlsx
discharge_agent/models/: __init__.py  patient.py  summary.py  trace.py
discharge_agent/prompts/: __init__.py  extraction_prompt.py  planning_prompt.py  reconciliation_prompt.py  summary_assembly_prompt.py  system_prompt.py
outputs/: patient_data_extracted.json  run_manifest.json
tools/: __init__.py  drug_checker.py  escalation_tool.py  logger.py  pdf_reader.py
workflows/: graph.py
(+40 files in other folders)
