[project]
name = "hospital-discharge-summary-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]

[tool.ruff.lint]
ignore = ["E402", "E741"]
